# pega-texto-jit

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindPegaTextoJIT.cmake
src/: CMakeLists.txt  main.c  pega-texto-jit.c  pega-texto-jit.h
